// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsList.vue should render the content correctly - with contacts 1`] = `
<div>
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="el-row"
  >
    <div
      class="el-col el-col-24"
    >
      <div>
        <h1>
          Contacts 
          <a
            class="add-contact-icon"
          >
            <svg
              class="add-icon fa-icon"
              color="green"
              height="32"
              role="presentation"
              style="font-size: 2em;"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="27.428571428571427"
            >
              <path
                d="M1216 960v-128q0-26-19-45t-45-19h-256v-256q0-26-19-45t-45-19h-128q-26 0-45 19t-19 45v256h-256q-26 0-45 19t-19 45v128q0 26 19 45t45 19h256v256q0 26 19 45t45 19h128q26 0 45-19t19-45v-256h256q26 0 45-19t19-45zM1536 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
              />
               
    
              <!---->
            </svg>
          </a>
        </h1>
      </div>
    </div>
  </div>
   
  <div
    class="el-row"
  >
    <div
      class="el-col el-col-24"
    >
      <div
        class="search-options"
      >
        <form
          class="el-form el-form--inline"
        >
          <div
            class="el-form-item"
          >
            <label
              class="el-form-item__label"
            >
              First name
            </label>
            <div
              class="el-form-item__content"
            >
              <div
                class="el-input"
              >
                <!---->
                <input
                  autocomplete="off"
                  class="el-input__inner"
                  rows="2"
                  type="text"
                  validateevent="true"
                />
                <!---->
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
           
          <div
            class="el-form-item"
          >
            <label
              class="el-form-item__label"
            >
              Last name
            </label>
            <div
              class="el-form-item__content"
            >
              <div
                class="el-input"
              >
                <!---->
                <input
                  autocomplete="off"
                  class="el-input__inner"
                  rows="2"
                  type="text"
                  validateevent="true"
                />
                <!---->
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
   
  <div
    class="el-row"
  >
    <div
      class="el-col el-col-24"
    >
      <div>
        <div
          class="el-table el-table--fit el-table--striped el-table--border el-table--hidden el-table--enable-row-transition"
          style="width: 100%;"
        >
          <div
            class="hidden-columns"
          >
            <div />
             
            <div />
             
            <div />
             
            <div />
             
            <div />
             
            <div />
             
            <div />
          </div>
          <div
            class="el-table__header-wrapper"
          >
            <table
              border="0"
              cellpadding="0"
              cellspacing="0"
              class="el-table__header"
              style="width: 600px;"
            >
              <colgroup>
                <col
                  name="el-table_1_column_8"
                  width="80"
                />
                <col
                  name="el-table_1_column_9"
                  width="80"
                />
                <col
                  name="el-table_1_column_10"
                  width="80"
                />
                <col
                  name="el-table_1_column_11"
                  width="80"
                />
                <col
                  name="el-table_1_column_12"
                  width="80"
                />
                <col
                  name="el-table_1_column_13"
                  width="80"
                />
                <col
                  name="el-table_1_column_14"
                  width="120"
                />
              </colgroup>
              <thead
                class=""
              >
                <tr
                  class=""
                >
                  <th
                    class="el-table_1_column_8  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      First name
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_9  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Last Name
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_10  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Date of birth
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_11  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      E-mail
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_12  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Addresses
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_13  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Phone numbers
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_14     is-hidden is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Actions
                    </div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div
            class="el-table__body-wrapper is-scroll-left"
          >
            <table
              border="0"
              cellpadding="0"
              cellspacing="0"
              class="el-table__body"
              style="width: 600px;"
            >
              <colgroup>
                <col
                  name="el-table_1_column_8"
                  width="80"
                />
                <col
                  name="el-table_1_column_9"
                  width="80"
                />
                <col
                  name="el-table_1_column_10"
                  width="80"
                />
                <col
                  name="el-table_1_column_11"
                  width="80"
                />
                <col
                  name="el-table_1_column_12"
                  width="80"
                />
                <col
                  name="el-table_1_column_13"
                  width="80"
                />
                <col
                  name="el-table_1_column_14"
                  width="120"
                />
              </colgroup>
              <tbody>
                <tr
                  class="el-table__row"
                >
                  <td
                    class="el-table_1_column_8 is-left "
                  >
                    <div
                      class="cell"
                    >
                      Bruno
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_9 is-left "
                  >
                    <div
                      class="cell"
                    >
                      Rezende
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_10 is-left "
                  >
                    <div
                      class="cell"
                    >
                      
              12/03/1980
            
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_11 is-left "
                  >
                    <div
                      class="cell"
                    >
                      <ul>
                        <li>
                          brunovianarezende@gmail.com
                        </li>
                      </ul>
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_12 is-left "
                  >
                    <div
                      class="cell"
                    >
                      <ul>
                        <li>
                          1373 George Avenue - Montgomery, AL, 36693
                        </li>
                      </ul>
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_13 is-left "
                  >
                    <div
                      class="cell"
                    >
                      <ul>
                        <li>
                          55-31-2515-5924
                        </li>
                        <li>
                          55-31-99967-7424
                        </li>
                      </ul>
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_14   is-hidden"
                  >
                    <div
                      class="cell"
                    >
                      <a
                        class="edit-contact-icon"
                      >
                        <svg
                          class="fa-icon"
                          color="green"
                          height="32"
                          role="presentation"
                          style="font-size: 2em;"
                          version="1.1"
                          viewBox="0 0 1792 1792"
                          width="32"
                        >
                          <path
                            d="M888 1184l116-116-152-152-116 116v56h96v96h56zM1328 464q-16-16-33 1l-350 350q-17 17-1 33t33-1l350-350q17-17 1-33zM1408 1058v190q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q63 0 117 25 15 7 18 23 3 17-9 29l-49 49q-14 14-32 8-23-6-45-6h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113v-126q0-13 9-22l64-64q15-15 35-7t20 29zM1312 320l288 288-672 672h-288v-288zM1756 452l-92 92-288-288 92-92q28-28 68-28t68 28l152 152q28 28 28 68t-28 68z"
                          />
                           
    
                          <!---->
                        </svg>
                      </a>
                       
                      <br />
                       
                      <a
                        class="delete-contact-icon"
                      >
                        <svg
                          aria-label="Delete"
                          class="fa-icon"
                          color="red"
                          height="32"
                          role="img"
                          style="font-size: 2em;"
                          version="1.1"
                          viewBox="0 0 1408 1792"
                          width="25.142857142857142"
                        >
                          <path
                            d="M1298 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"
                          />
                           
    
                          <!---->
                        </svg>
                      </a>
                    </div>
                  </td>
                </tr>
                <tr
                  class="el-table__row el-table__row--striped"
                >
                  <td
                    class="el-table_1_column_8 is-left "
                  >
                    <div
                      class="cell"
                    >
                      Jose
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_9 is-left "
                  >
                    <div
                      class="cell"
                    >
                      Anything
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_10 is-left "
                  >
                    <div
                      class="cell"
                    >
                      
              30/12/1975
            
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_11 is-left "
                  >
                    <div
                      class="cell"
                    >
                      <ul>
                        <li>
                          jose@gmail.com
                        </li>
                      </ul>
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_12 is-left "
                  >
                    <div
                      class="cell"
                    >
                      <ul />
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_13 is-left "
                  >
                    <div
                      class="cell"
                    >
                      <ul />
                    </div>
                  </td>
                  <td
                    class="el-table_1_column_14   is-hidden"
                  >
                    <div
                      class="cell"
                    >
                      <a
                        class="edit-contact-icon"
                      >
                        <svg
                          class="fa-icon"
                          color="green"
                          height="32"
                          role="presentation"
                          style="font-size: 2em;"
                          version="1.1"
                          viewBox="0 0 1792 1792"
                          width="32"
                        >
                          <path
                            d="M888 1184l116-116-152-152-116 116v56h96v96h56zM1328 464q-16-16-33 1l-350 350q-17 17-1 33t33-1l350-350q17-17 1-33zM1408 1058v190q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q63 0 117 25 15 7 18 23 3 17-9 29l-49 49q-14 14-32 8-23-6-45-6h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113v-126q0-13 9-22l64-64q15-15 35-7t20 29zM1312 320l288 288-672 672h-288v-288zM1756 452l-92 92-288-288 92-92q28-28 68-28t68 28l152 152q28 28 28 68t-28 68z"
                          />
                           
    
                          <!---->
                        </svg>
                      </a>
                       
                      <br />
                       
                      <a
                        class="delete-contact-icon"
                      >
                        <svg
                          aria-label="Delete"
                          class="fa-icon"
                          color="red"
                          height="32"
                          role="img"
                          style="font-size: 2em;"
                          version="1.1"
                          viewBox="0 0 1408 1792"
                          width="25.142857142857142"
                        >
                          <path
                            d="M1298 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"
                          />
                           
    
                          <!---->
                        </svg>
                      </a>
                    </div>
                  </td>
                </tr>
                <!---->
              </tbody>
            </table>
            <!---->
            <!---->
          </div>
          <!---->
          <!---->
          <div
            class="el-table__fixed-right"
            style="width: 120px;"
          >
            <div
              class="el-table__fixed-header-wrapper"
            >
              <table
                border="0"
                cellpadding="0"
                cellspacing="0"
                class="el-table__header"
                style="width: 120px;"
              >
                <colgroup>
                  <col
                    name="el-table_1_column_8"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_9"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_10"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_11"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_12"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_13"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_14"
                    width="120"
                  />
                </colgroup>
                <thead
                  class=""
                >
                  <tr
                    class=""
                  >
                    <th
                      class="el-table_1_column_8  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        First name
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_9  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Last Name
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_10  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Date of birth
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_11  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        E-mail
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_12  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Addresses
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_13  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Phone numbers
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_14     is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Actions
                      </div>
                    </th>
                  </tr>
                </thead>
              </table>
            </div>
            <div
              class="el-table__fixed-body-wrapper"
              style="top: 0px;"
            >
              <table
                border="0"
                cellpadding="0"
                cellspacing="0"
                class="el-table__body"
                style="width: 120px;"
              >
                <colgroup>
                  <col
                    name="el-table_1_column_8"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_9"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_10"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_11"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_12"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_13"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_14"
                    width="120"
                  />
                </colgroup>
                <tbody>
                  <tr
                    class="el-table__row"
                  >
                    <td
                      class="el-table_1_column_8 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        Bruno
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_9 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        Rezende
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_10 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        
              12/03/1980
            
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_11 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        <ul>
                          <li>
                            brunovianarezende@gmail.com
                          </li>
                        </ul>
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_12 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        <ul>
                          <li>
                            1373 George Avenue - Montgomery, AL, 36693
                          </li>
                        </ul>
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_13 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        <ul>
                          <li>
                            55-31-2515-5924
                          </li>
                          <li>
                            55-31-99967-7424
                          </li>
                        </ul>
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_14  "
                    >
                      <div
                        class="cell"
                      >
                        <a
                          class="edit-contact-icon"
                        >
                          <svg
                            class="fa-icon"
                            color="green"
                            height="32"
                            role="presentation"
                            style="font-size: 2em;"
                            version="1.1"
                            viewBox="0 0 1792 1792"
                            width="32"
                          >
                            <path
                              d="M888 1184l116-116-152-152-116 116v56h96v96h56zM1328 464q-16-16-33 1l-350 350q-17 17-1 33t33-1l350-350q17-17 1-33zM1408 1058v190q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q63 0 117 25 15 7 18 23 3 17-9 29l-49 49q-14 14-32 8-23-6-45-6h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113v-126q0-13 9-22l64-64q15-15 35-7t20 29zM1312 320l288 288-672 672h-288v-288zM1756 452l-92 92-288-288 92-92q28-28 68-28t68 28l152 152q28 28 28 68t-28 68z"
                            />
                             
    
                            <!---->
                          </svg>
                        </a>
                         
                        <br />
                         
                        <a
                          class="delete-contact-icon"
                        >
                          <svg
                            aria-label="Delete"
                            class="fa-icon"
                            color="red"
                            height="32"
                            role="img"
                            style="font-size: 2em;"
                            version="1.1"
                            viewBox="0 0 1408 1792"
                            width="25.142857142857142"
                          >
                            <path
                              d="M1298 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"
                            />
                             
    
                            <!---->
                          </svg>
                        </a>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="el-table__row el-table__row--striped"
                  >
                    <td
                      class="el-table_1_column_8 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        Jose
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_9 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        Anything
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_10 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        
              30/12/1975
            
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_11 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        <ul>
                          <li>
                            jose@gmail.com
                          </li>
                        </ul>
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_12 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        <ul />
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_13 is-left  is-hidden"
                    >
                      <div
                        class="cell"
                      >
                        <ul />
                      </div>
                    </td>
                    <td
                      class="el-table_1_column_14  "
                    >
                      <div
                        class="cell"
                      >
                        <a
                          class="edit-contact-icon"
                        >
                          <svg
                            class="fa-icon"
                            color="green"
                            height="32"
                            role="presentation"
                            style="font-size: 2em;"
                            version="1.1"
                            viewBox="0 0 1792 1792"
                            width="32"
                          >
                            <path
                              d="M888 1184l116-116-152-152-116 116v56h96v96h56zM1328 464q-16-16-33 1l-350 350q-17 17-1 33t33-1l350-350q17-17 1-33zM1408 1058v190q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q63 0 117 25 15 7 18 23 3 17-9 29l-49 49q-14 14-32 8-23-6-45-6h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113v-126q0-13 9-22l64-64q15-15 35-7t20 29zM1312 320l288 288-672 672h-288v-288zM1756 452l-92 92-288-288 92-92q28-28 68-28t68 28l152 152q28 28 28 68t-28 68z"
                            />
                             
    
                            <!---->
                          </svg>
                        </a>
                         
                        <br />
                         
                        <a
                          class="delete-contact-icon"
                        >
                          <svg
                            aria-label="Delete"
                            class="fa-icon"
                            color="red"
                            height="32"
                            role="img"
                            style="font-size: 2em;"
                            version="1.1"
                            viewBox="0 0 1408 1792"
                            width="25.142857142857142"
                          >
                            <path
                              d="M1298 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"
                            />
                             
    
                            <!---->
                          </svg>
                        </a>
                      </div>
                    </td>
                  </tr>
                  <!---->
                </tbody>
              </table>
            </div>
            <!---->
          </div>
          <div
            class="el-table__fixed-right-patch"
            style="width: 0px; height: 0px;"
          />
          <div
            class="el-table__column-resize-proxy"
            style="display: none;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContactsList.vue should render the content correctly - without contacts 1`] = `
<div>
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="el-row"
  >
    <div
      class="el-col el-col-24"
    >
      <div>
        <h1>
          Contacts 
          <a
            class="add-contact-icon"
          >
            <svg
              class="add-icon fa-icon"
              color="green"
              height="32"
              role="presentation"
              style="font-size: 2em;"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="27.428571428571427"
            >
              <path
                d="M1216 960v-128q0-26-19-45t-45-19h-256v-256q0-26-19-45t-45-19h-128q-26 0-45 19t-19 45v256h-256q-26 0-45 19t-19 45v128q0 26 19 45t45 19h256v256q0 26 19 45t45 19h128q26 0 45-19t19-45v-256h256q26 0 45-19t19-45zM1536 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
              />
               
    
              <!---->
            </svg>
          </a>
        </h1>
      </div>
    </div>
  </div>
   
  <div
    class="el-row"
  >
    <div
      class="el-col el-col-24"
    >
      <div
        class="search-options"
      >
        <form
          class="el-form el-form--inline"
        >
          <div
            class="el-form-item"
          >
            <label
              class="el-form-item__label"
            >
              First name
            </label>
            <div
              class="el-form-item__content"
            >
              <div
                class="el-input"
              >
                <!---->
                <input
                  autocomplete="off"
                  class="el-input__inner"
                  rows="2"
                  type="text"
                  validateevent="true"
                />
                <!---->
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
           
          <div
            class="el-form-item"
          >
            <label
              class="el-form-item__label"
            >
              Last name
            </label>
            <div
              class="el-form-item__content"
            >
              <div
                class="el-input"
              >
                <!---->
                <input
                  autocomplete="off"
                  class="el-input__inner"
                  rows="2"
                  type="text"
                  validateevent="true"
                />
                <!---->
                <!---->
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
   
  <div
    class="el-row"
  >
    <div
      class="el-col el-col-24"
    >
      <div>
        <div
          class="el-table el-table--fit el-table--striped el-table--border el-table--hidden"
          style="width: 100%;"
        >
          <div
            class="hidden-columns"
          >
            <div />
             
            <div />
             
            <div />
             
            <div />
             
            <div />
             
            <div />
             
            <div />
          </div>
          <div
            class="el-table__header-wrapper"
          >
            <table
              border="0"
              cellpadding="0"
              cellspacing="0"
              class="el-table__header"
              style="width: 600px;"
            >
              <colgroup>
                <col
                  name="el-table_1_column_1"
                  width="80"
                />
                <col
                  name="el-table_1_column_2"
                  width="80"
                />
                <col
                  name="el-table_1_column_3"
                  width="80"
                />
                <col
                  name="el-table_1_column_4"
                  width="80"
                />
                <col
                  name="el-table_1_column_5"
                  width="80"
                />
                <col
                  name="el-table_1_column_6"
                  width="80"
                />
                <col
                  name="el-table_1_column_7"
                  width="120"
                />
              </colgroup>
              <thead
                class=""
              >
                <tr
                  class=""
                >
                  <th
                    class="el-table_1_column_1  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      First name
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_2  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Last Name
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_3  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Date of birth
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_4  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      E-mail
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_5  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Addresses
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_6  is-left   is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Phone numbers
                    </div>
                  </th>
                  <th
                    class="el-table_1_column_7     is-hidden is-leaf"
                    colspan="1"
                    rowspan="1"
                  >
                    <div
                      class="cell"
                    >
                      Actions
                    </div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div
            class="el-table__body-wrapper is-scroll-left"
          >
            <table
              border="0"
              cellpadding="0"
              cellspacing="0"
              class="el-table__body"
              style="width: 600px;"
            >
              <colgroup>
                <col
                  name="el-table_1_column_1"
                  width="80"
                />
                <col
                  name="el-table_1_column_2"
                  width="80"
                />
                <col
                  name="el-table_1_column_3"
                  width="80"
                />
                <col
                  name="el-table_1_column_4"
                  width="80"
                />
                <col
                  name="el-table_1_column_5"
                  width="80"
                />
                <col
                  name="el-table_1_column_6"
                  width="80"
                />
                <col
                  name="el-table_1_column_7"
                  width="120"
                />
              </colgroup>
              <tbody>
                <!---->
              </tbody>
            </table>
            <div
              class="el-table__empty-block"
              style="width: 600px;"
            >
              <span
                class="el-table__empty-text"
              >
                There are no contacts
              </span>
            </div>
            <!---->
          </div>
          <!---->
          <!---->
          <div
            class="el-table__fixed-right"
            style="width: 120px;"
          >
            <div
              class="el-table__fixed-header-wrapper"
            >
              <table
                border="0"
                cellpadding="0"
                cellspacing="0"
                class="el-table__header"
                style="width: 120px;"
              >
                <colgroup>
                  <col
                    name="el-table_1_column_1"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_2"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_3"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_4"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_5"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_6"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_7"
                    width="120"
                  />
                </colgroup>
                <thead
                  class=""
                >
                  <tr
                    class=""
                  >
                    <th
                      class="el-table_1_column_1  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        First name
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_2  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Last Name
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_3  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Date of birth
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_4  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        E-mail
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_5  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Addresses
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_6  is-left   is-hidden is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Phone numbers
                      </div>
                    </th>
                    <th
                      class="el-table_1_column_7     is-leaf"
                      colspan="1"
                      rowspan="1"
                    >
                      <div
                        class="cell"
                      >
                        Actions
                      </div>
                    </th>
                  </tr>
                </thead>
              </table>
            </div>
            <div
              class="el-table__fixed-body-wrapper"
              style="top: 0px;"
            >
              <table
                border="0"
                cellpadding="0"
                cellspacing="0"
                class="el-table__body"
                style="width: 120px;"
              >
                <colgroup>
                  <col
                    name="el-table_1_column_1"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_2"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_3"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_4"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_5"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_6"
                    width="80"
                  />
                  <col
                    name="el-table_1_column_7"
                    width="120"
                  />
                </colgroup>
                <tbody>
                  <!---->
                </tbody>
              </table>
            </div>
            <!---->
          </div>
          <div
            class="el-table__fixed-right-patch"
            style="width: 0px; height: 0px;"
          />
          <div
            class="el-table__column-resize-proxy"
            style="display: none;"
          />
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
